# Effective-programming-techniques

./: CMakeLists.txt  README.md
Lab1/: CTable.cpp  CTable.h  CTableFunctions.cpp  CTableFunctions.h  CTableTest.cpp  CTableTest.h  main.cpp
Lab2/: CEffectivityTestClass.cpp  CEffectivityTestClass.h  CHelpFunctions.cpp  CHelpFunctions.h  CNumber.cpp  CNumber.h  CTestsForOperators.cpp  CTestsForOperators.h  main.cpp
Lab3/: CInterface.cpp  CInterface.h  CTree.cpp  CTree.h  Interface.cpp  Interface.h  Tree.cpp  Tree.h  main.cpp
Lab3/Tools/: CNode.cpp  CNode.h  CPreprocessExpression.cpp  CPreprocessExpression.h
Lab3/Utilities/: CFixExpression.cpp  CFixExpression.h  CNode.cpp  CNode.h  CPreprocessExpression.cpp  CPreprocessExpression.h  CScan.cpp  CScan.h  CTreesUtility.cpp  CTreesUtility.h  FixExpression.cpp  FixExpression.h  Node.cpp  Node.h  Operators.h  Tools.cpp  Tools.h
Lab4/: FixExpression.h  Interface.cpp  Interface.h  Node.h  Tools.h  Tree.h  main.cpp
Lab4/tools/: Node.h  Operators.h
Lab4/utilities/: FixExpression.h  Tools.h
Lab5/: Interface.h  MySmartPointer.h  RefCounter.h  Tree.h  main.cpp
Lab5/utilities/: Node.h  Operator.h  OperatorNode.h  Tools.cpp  Tools.h  Type.h  ValueNode.h  VariableNode.h
MyString/: String.cpp  String.h  main.cpp
